# dartboard

./: .gitignore  README.md  pyproject.toml
examples/: demo_transient.py  sandbox.py  sandbox_transient.py
src/dartboard/: transient.py  utils.py
src/dartboard/stan_models/base/: __init__.py  base_stan_model.py
src/dartboard/stan_models/transient/: __init__.py
src/dartboard/stan_models/transient/decay_exponential/: __init__.py  decay_exponential.py  decay_exponential.stan
